2005-10-17  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/Makefile.am:
	* configure.ac:
	Add --with-xfile-search-path=<path> and default setting to match
	monolith XFileSearchPathDefault in Imake (including extra directories
	used in Debian section of linux.cf.)
	
2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: 
	* configure.ac:
	Set up cpp pre-processing of man pages
	Add shadow man pages for man pages that document multiple functions.

2005-09-20  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add checks for poll & snprintf & define old Imake names if found
	Enable XKB usage in Xt unless --disable-xkb is specified
	Set STRINGSABIOPTIONS for building StringDefs files on Solaris, SCO,
	and SVR4 systems.

2005-08-01  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* src/Makefile.am:
	Move building of StringDefs files to src and
	fix them so that parallel make works right.

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* include/.cvsignore:
	* include/X11/.cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* util/.cvsignore:
	Add .cvsignore files

2005-06-10  Alexander Gottwald  <ago at freedesktop dot org>

	* src/Makefile.am:
	Add -no-undefined to linker command to build shared library on cygwin too
 
2005-06-10  Alexander Gottwald  <ago at freedesktop dot org>

	* Makefile.am:
	ensure $(buildir)/src and $(builddir)/include/X11 exist before installing
	generated files there

2005-05-24  Alexander Gottwald  <ago at freedesktop dot org>

	* Makefile.am:
	separation of source and build directories

2005-05-22  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: Convert man pages to long file names

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: Check for <alloca.h> and define INCLUDE_ALLOCA_H
	if found, since <Xalloca.h> requires it.

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>
