@@ -96,7 +96,8 @@ $(BUILT_HEADER): $(BUILT_SOURCE)
 
 $(BUILT_SOURCE):
 	$(top_builddir)/util/makestrs -i $(top_srcdir) $(STRINGSABIOPTIONS) < $(STRING_LIST) > StringDefs.c
-	$(install_sh_DATA) -d $(top_builddir)/src $(top_builddir)/include/X11
-	$(install_sh_DATA) StringDefs.h $(top_builddir)/include/X11/
-	$(install_sh_DATA) Shell.h $(top_builddir)/include/X11/
+	$(install_sh_DATA) -d $(top_builddir)/src
+	$(install_sh_DATA) -d $(top_builddir)/include/X11
+	$(install_sh_DATA) StringDefs.h $(top_builddir)/include/X11
+	$(install_sh_DATA) Shell.h $(top_builddir)/include/X11
 	rm StringDefs.h Shell.h
